added the weaknesses badge pills

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,9 @@ body {
     align-items:center;
     color:white;
 }
-
+#img-modal {
+    max-height:300px;
+}
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
