--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 #btn-luck {
     height:60px;
     background-color:white;
-    color:black;
+    color:#ff5454;
     font-size:30px;
 }
 
@@ -53,9 +53,10 @@ body {
 #logo {
     width:200px;
     margin:0 auto;
-    margin-top:30px;
+    margin-top:0px;
 
 }
+
 .div-logo {
     text-align:center;
     color:white;
@@ -73,6 +74,10 @@ body {
 .form {
     width:80%;
     margin:0 auto;
+}
+.discount {
+    height:50px;
+    background-color:rgba(208, 35, 35, 0.79);
 }
 #description {
     padding-top:20px;
@@ -94,16 +99,21 @@ body {
     background-color:#fff;
     height:100vh;
 }
-.top-nav {
-    text-align:center;
-    position:absolute;
-}
+
 .ul-flex {
     display:flex;
     align-items:center;
     height:50px;
+    justify-content:flex-end;
     margin:0;
     padding:0;
+}
+.ul-flex a {
+    color:white;
+}
+.ul-flex a li {
+    list-style-type:none;
+    padding:20px;
 }
 .nav {
     display:flex;
@@ -429,7 +439,15 @@ textarea {
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
-
+@media only screen and (max-width: 992px) {
+    .ul-flex {
+        justify-content: center;
+    }
+    #logo {
+        margin-top:20px;
+    }
+    /* Style adjustments for viewports that meet the condition */
+}
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
